# homework

hexlet_pytest/: pyproject.toml
tests/: test_capitalize.py
