[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Dmitrii L <hexletdmitrii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
